k8s/nginx-test/nginx-virtual-service.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: bookinfo-rule
  namespace: default 
spec:
  hosts:
  - nginx.$CLUSTER_BASE_URL
  gateways:
  - nginx-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host:  nginx-service
        port:
          number:
            80
